
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int uint64_t ;
struct TYPE_2__ {struct waitq* wqp_wq_ptr; } ;
struct wq_prepost {TYPE_1__ wqp_wq; } ;
struct waitq {int dummy; } ;


 int assert (int) ;
 int disable_preemption () ;
 int enable_preemption () ;
 int waitq_irq_safe (struct waitq*) ;
 int waitq_lock (struct waitq*) ;
 int waitq_unlock (struct waitq*) ;
 int waitq_valid (struct waitq*) ;
 struct wq_prepost* wq_prepost_get (int ) ;
 int wq_prepost_put (struct wq_prepost*) ;

struct waitq *waitq_lock_by_prepost_id(uint64_t wqp_id)
{
 struct waitq *wq = ((void*)0);
 struct wq_prepost *wqp;

 disable_preemption();
 wqp = wq_prepost_get(wqp_id);
 if (wqp) {
  wq = wqp->wqp_wq.wqp_wq_ptr;

  assert(!waitq_irq_safe(wq));

  waitq_lock(wq);
  wq_prepost_put(wqp);

  if (!waitq_valid(wq)) {

   waitq_unlock(wq);
   enable_preemption();
   return ((void*)0);
  }
 }
 enable_preemption();
 return wq;
}
